customer mobile improvements

--- a/src/main/webapp/calendar.html
+++ b/src/main/webapp/calendar.html
@@ -32,11 +32,11 @@
 							<span class="lift:CompanySnippet.thumbh"> </span>
 						</span>
 						<span class='calendar-filter lift:SecuritySnippet.hasUnitModule'>
-							<span class='label-calendar'>
+							<span class='hide_mobile label-calendar'>
 								Unidade : 	
 							</span class='label-calendar'>
 							<span style="position: relative; bottom: 0; top: -10px;">
-								<select class="notselect2" name="units" id='units'></select>
+								<select class="medium notselect2" name="units" id='units'></select>
 							</span>
 						</span>
 						<span class='calendar-filter hide_mobile'>
@@ -46,10 +46,10 @@
 							<select class="notselect21" name="groups" id='groups'></select>
 						</span>
 						<span class='calendar-filter'>
-							<span class='label-calendar'>
+							<span class='hide_mobile label-calendar'>
 								<span data-i18n='Profissional'></span> : 	
 							</span class='label-calendar'>						
-							<select class="notselect21" multiple="true" name="user" id='user'></select>
+							<select class="medium notselect21" multiple="true" placeholder="Profissional" name="user" id='user'></select>
 							<!--<span class="label-calendar"> 
 								<button class="btn" id="show_conflits" alt='Mostrar conflitos'>
 									<img src="/images/conf_commision.png" style="width: 16px;"/>
