--- a/src/main/webapp/financial/account_register.html
+++ b/src/main/webapp/financial/account_register.html
@@ -597,7 +597,7 @@
                     <label for="amount">Quantidade</label>
                     <div class="input">
                       <div class="input-prepend">
-                        <input class="mini currency" id="amount" name="amount" value="1" size="30" type="text"/>
+                        <input class="mini" id="amount" name="amount" value="1" size="30" type="number"/>
                         <span class="help-block">
                           Quantidade do lançamento
                         </span>
