--- a/src/main/webapp/templates-hidden/dashboard_customer.html
+++ b/src/main/webapp/templates-hidden/dashboard_customer.html
@@ -9,6 +9,8 @@
   <link class="lift:SecuritySnippet.isEphysioSystem" rel="shortcut icon" href="/images/logo_ftr_ephysio.ico" type="image/x-icon" />
   <link class="lift:SecuritySnippet.isEbellepetSystem" rel="shortcut icon" href="/images/logo_ftr_ebellepet.ico" type="image/x-icon" />
   <meta charset="utf-8">
+    <!-- Não deixa pinças no android -->
+    <meta name="viewport" content="initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no,width=device-width">
   <title>Pessoas</title>
   <!-- Le fav and touch icons -->
   <link rel="shortcut icon" href="/images/icon.ico">
@@ -142,6 +144,18 @@
   <div class="container-fluid">
     <div class="sidebar">
       <div>
+        <ul class="show_mobile">
+          <li>
+              <img width='32' src="/images/icon.png"/>
+          </li>
+              <img width='32' src="/images/icon.png"/>
+          <li>
+          </li>
+              <img width='32' src="/images/icon.png"/>
+          <li>
+              <img width='32' src="/images/icon.png"/>
+          </li>
+        </ul>
         <h5>Agenda</h5>
         <ul>
           <li>
