customer mobile improvements 2

--- a/src/main/webapp/templates-hidden/dashboard_customer.html
+++ b/src/main/webapp/templates-hidden/dashboard_customer.html
@@ -144,7 +144,9 @@
   <div class="container-fluid">
     <div class="sidebar">
       <div>
-        <ul class="show_mobile">
+        <!--ul class="show_mobile">
+        Não ficou legal qdo nao é mobile
+        trocar por <br/> ou fazer um onlymobile
           <li>
               <img width='32' src="/images/icon.png"/>
           </li>
@@ -155,7 +157,7 @@
           <li>
               <img width='32' src="/images/icon.png"/>
           </li>
-        </ul>
+        </ul-->
         <h5>Agenda</h5>
         <ul>
           <li>
@@ -305,7 +307,7 @@
   <div class="content span18">
     <div class="page-header span18">
       <h1>
-        <span class="lift:CompanySnippet.thumb"></span><span class="lift:Menu.title"></span><small> - <span class='system-name'></span> Gestão Integrada</span></small>
+        <span class="lift:CompanySnippet.thumb"></span><span class="lift:Menu.title"></span><small> - <span class='system-name'></span><span class="hide_mobile"> Gestão Integrada</span></span></small>
       </h1>
     </div>      
     <div class="row">
