reports responsive mobile

--- a/src/main/webapp/templates-hidden/calendar.html
+++ b/src/main/webapp/templates-hidden/calendar.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html manifest="/cache.manifest">
   <head>
+    <!-- Não deixa pinças no android -->
+    <meta name="viewport" content="initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no,width=device-width">
     <link class="lift:SecuritySnippet.isEbelleSystem" rel="shortcut icon" href="/images/logo_ftr_ebelle.ico" type="image/x-icon" />
     <link class="lift:SecuritySnippet.isGerirmeSystem" rel="shortcut icon" href="/images/logo_ftr_gerirme.ico" type="image/x-icon" />
     <link class="lift:SecuritySnippet.isEsmileSystem" rel="shortcut icon" href="/images/logo_ftr_esmile.ico" type="image/x-icon" />
