--- a/src/main/webapp/templates-hidden/financial.html
+++ b/src/main/webapp/templates-hidden/financial.html
@@ -2,6 +2,7 @@
 <html manifest="/cache.manifest">
     <head  xmlns="http://www.w3.org/1999/xhtml" xmlns:lift="http://liftweb.net/">
       <meta charset="utf-8">
+      <!--meta name="viewport" content="initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no,width=device-width"-->
       <link class="lift:SecuritySnippet.isEbelleSystem" rel="shortcut icon" href="/images/logo_ftr_ebelle.ico" type="image/x-icon" />
       <link class="lift:SecuritySnippet.isGerirmeSystem" rel="shortcut icon" href="/images/logo_ftr_gerirme.ico" type="image/x-icon" />
       <link class="lift:SecuritySnippet.isEsmileSystem" rel="shortcut icon" href="/images/logo_ftr_esmile.ico" type="image/x-icon" />
