--- a/src/main/webapp/treatments_conferenc.html
+++ b/src/main/webapp/treatments_conferenc.html
@@ -210,8 +210,8 @@
         <th>Comanda</th>
         <th>Data</th>
         <th>Início</th>
-        <th>Fim</th>        
-        <th>Código</th>
+        <th class="hide_mobile">Fim</th>        
+        <th class="hide_mobile">Código</th>
         <th>Nome_<span data-i18n='Cliente'></span>...</th>
         <th>Telelefone.....</th>
         <th>Obs</th>
