solo module && mobile improvements

--- a/src/main/webapp/activity/edit.html
+++ b/src/main/webapp/activity/edit.html
@@ -74,7 +74,7 @@
                 </div>
               </div>
             </div>
-            <div class="clearfix">
+            <div class="clearfix lift:SecuritySnippet.hasNotSoloModule">
               <label for="commissionAbs">Comissão Abs</label>
               <div class="input">
                 <div class="input-prepend">
@@ -172,7 +172,7 @@
                 <span class="help-block">Se o serviço se aplica a ambos os sexos ou a um específico</span>
               </div>
             </div>            
-            <div class="clearfix">
+            <div class="clearfix lift:SecuritySnippet.hasNotSoloModule">
               <label for="commission">Comissão </label>
               <div class="input">
                 <div class="input-append">
