--- a/src/main/webapp/calendar.html
+++ b/src/main/webapp/calendar.html
@@ -39,13 +39,13 @@
 								<select class="medium notselect2" name="units" id='units'></select>
 							</span>
 						</span>
-						<span class='calendar-filter hide_mobile'>
+						<span class='calendar-filter hide_mobile lift:SecuritySnippet.hasNotSoloModule'>
 							<span class='label-calendar'>
 								<span data-i18n='Grupos'></span> : 	
 							</span class='label-calendar'>						
 							<select class="notselect21" name="groups" id='groups'></select>
 						</span>
-						<span class='calendar-filter'>
+						<span class='calendar-filter lift:SecuritySnippet.hasNotSoloModule'>
 							<span class='hide_mobile label-calendar'>
 								<span data-i18n='Profissional'></span> : 	
 							</span class='label-calendar'>						
