--- a/src/main/webapp/customer/edit.html
+++ b/src/main/webapp/customer/edit.html
@@ -17,6 +17,7 @@
                 <input type="hidden" class="has-edoctus-system lift:SecuritySnippet.isEdoctusSystem" value="1">
                 <input type="hidden" class="has-ephysio-system lift:SecuritySnippet.isEphysioSystem" value="1">
                 <input type="hidden" class="has-gerirme-system lift:SecuritySnippet.isGerirmeSystem" value="1">
+                <input type="hidden" class="has-not-solo-module lift:SecuritySnippet.hasNotSoloModule" value="1">
             </div>
             <span id="user_form">
                 <span class='row'>
@@ -704,7 +705,7 @@
                 <thead>
                     <th>Início</th>
                     <th>Obs</th>
-                    <th><span data-i18n='Profissional'></span></th>
+                    <th class="lift:SecuritySnippet.hasNotSoloModule"><span data-i18n='Profissional'></span></th>
                     <th class="lift:SecuritySnippet.hasUnitModule">Unidade</th>
                     <th>Status</th>
                     <th>Total</th>
