--- a/src/main/webapp/treatments_conferenc.html
+++ b/src/main/webapp/treatments_conferenc.html
@@ -209,7 +209,7 @@
       <thead>
         <th>Comanda</th>
         <th>Data</th>
-        <th>Início</th>
+        <th class="hide_mobile">Início</th>
         <th class="hide_mobile">Fim</th>        
         <th class="hide_mobile">Código</th>
         <th>Nome_<span data-i18n='Cliente'></span>...</th>
