--- a/src/main/webapp/financial_admin/payment_forms.html
+++ b/src/main/webapp/financial_admin/payment_forms.html
@@ -38,13 +38,13 @@
           </div>
         </div>
         <ul class="tabs">
-          <li class="active tab"><a href="#commission">Comissão</a></li>
-          <li class="tab"><a href="#cash">Caixa</a></li>
+          <li class="tab lift:SecuritySnippet.hasNotSoloModule"><a href="#commission">Comissão</a></li>
+          <li class="active tab"><a href="#cash">Caixa</a></li>
           <li class="tab"><a href="#behavior">Comportamento Pagamento</a></li>
           <li class="tab"><a href="#receive">Faturamento</a></li>
         </ul>
         <div class="pill-content">
-          <div class="active tab_content" id="commission">
+          <div class="active tab_content lift:SecuritySnippet.hasNotSoloModule" id="commission">
             <div class="clearfix">
               <label for="generateCommision">Gera Comissão?</label>        
               <div class="input">
