--- a/src/main/webapp/company_log/edit.html
+++ b/src/main/webapp/company_log/edit.html
@@ -234,13 +234,14 @@
 			              		<span class="help-block">Hora inicial e final para aceitar agendamentos</span>
 				            </div>
 			          	</div>
-						<div class="clearfix">
+						<!--div class="clearfix">
+						é true para todo mundo nao faz sentido - 11/04/2017
 				            <label for="autoOpenCalendar">Auto abrir a agenda?</label>
 				            <div class="input">
 				              <input id="autoOpenCalendar" name='autoOpenCalendar'>
 				              <span class="help-block">Abrir automaticamente a agenda?</span>
 				            </div>
-			          	</div> 
+			          	</div--> 
 						<div class="clearfix">
 				            <label for="calendarShowId">Mostra id <span data-i18n='Clientes'></span></label>
 				            <div class="input">
