unit in activity - calendar icon alert

--- a/src/main/webapp/activity/edit.html
+++ b/src/main/webapp/activity/edit.html
@@ -84,6 +84,17 @@
                 </div>
               </div>
             </div>
+            <input type="hidden" class="has-unit-module lift:SecuritySnippet.hasUnitModule" value="1">
+            <div class="clearfix lift:SecuritySnippet.hasUnitModule">
+              <label for="unit">Unidade</label>
+              <div class="input">
+                <div class="input-prepend">
+                  <select class="large" id="unit" name="unit" >
+                  </select>
+                </div>
+                <span class="help-block">Informe somente se o serviço/procedimento for exclusivo desta unidade</span>
+              </div>
+            </div>
             <div class="clearfix lift:SecuritySnippet.hasFidelityModule">
               <label for="pointsonbuy" >Pontos Fidelidade</label>
               <div class="input">
