--- a/src/main/webapp/bprelationship/bprelationship.html
+++ b/src/main/webapp/bprelationship/bprelationship.html
@@ -97,6 +97,12 @@
                   <span class="help-block">Observações</span>
                 </div>
               </div>
+              <div class="clearfix">
+                  <label for="auditstr">Auditoria</label>
+                  <div class="input">
+                    <input class="xlarge disabled" disabled="true" id="auditstr" name="auditstr"  type="text"/>
+                  </div>
+              </div>                     
             </span>
           </span>
         </span>
