unit list - shortname and showincalendar

--- a/src/main/webapp/unit/list.html
+++ b/src/main/webapp/unit/list.html
@@ -27,6 +27,8 @@
 		<thead>
 			<th>Id</th>
 			<th>Nome</th>
+			<th>Reduz</th>
+			<th>Agenda</th>
 			<th>Ações</th>
 		</thead>
 		<tbody>
@@ -36,6 +38,12 @@
 				</td>
 				<td>
 					<f:name></f:name>
+				</td>
+				<td>
+					<f:shortname></f:shortname>
+				</td>
+				<td>
+					<f:showincalendar></f:showincalendar>
 				</td>
 				<td>
 					<form method="post">
