--- a/src/main/webapp/financial/upload_bank_file.html
+++ b/src/main/webapp/financial/upload_bank_file.html
@@ -8,6 +8,7 @@
 	$(function(){
       $(".account").accountField();
       $(".category").categoryAccountField();		
+      $("#unit_select").unitField(false, false, true);
 	})
 </script>
 <h3>
@@ -17,35 +18,49 @@
   </div>
 </h3>
 <form class="lift:UploadOfx?form=post;multipart=true">
-  <div class="clearfix">
-    <label for="name">Arquivo</label>
-    <div class="input">
-    	<div class="input-prepend">
-    		<input type="text" name='file' id='file'/>
+  <div class="row">
+    <div class="span8">
+      <div class="clearfix">
+        <label for="name">Arquivo</label>
+        <div class="input">
+        	<div class="input-prepend">
+        		<input type="text" name='file' id='file'/>
+        	</div>
+        </div>
+      </div>
+    	<div class="clearfix">
+    	  <label for="defaltAccount">Conta padrão dos lançamentos</label>
+    	   <div class="input">
+    	        <select name='account' class="account notselect2 local_storage">
+    	        </select>
+    	   </div>
     	</div>
+    	<div class="clearfix">
+    	  <label for="category">Categoria padrão dos lançamentos</label>
+    	   <div class="input">
+    			<select name='category' class="category notselect2 local_storage">
+    			</select>
+    	   </div>
+    	</div>   
+      <div class="clearfix">
+        <label for="name"></label>
+        <div class="input">
+    	    <div class="input-prepend">
+    	    	<input class="btn success" type="submit" "Enviar"/>
+    	    </div>
+    	  </div>
+      </div>
+    </div> 
+    <div class="span8">
+      <div class="clearfix">
+        <label for="unit_select">Unidade</label>
+          <div class="input">
+            <div class="inline-inputs">
+              <select id='unit_select' class="unit_select url_parameter notselect2" name='unit_select' disabled></select>
+            </div>
+          </div>
+      </div>                     
     </div>
   </div>
-	<div class="clearfix">
-	  <label for="defaltAccount">Conta padrão dos lançamentos</label>
-	   <div class="input">
-	        <select name='account' class="account notselect2 local_storage">
-	        </select>
-	   </div>
-	</div>
-	<div class="clearfix">
-	  <label for="category">Categoria padrão dos lançamentos</label>
-	   <div class="input">
-			<select name='category' class="category notselect2 local_storage">
-			</select>
-	   </div>
-	</div>   
-    <div class="clearfix">
-    <label for="name"></label>
-    <div class="input">
-	    <div class="input-prepend">
-	    	<input class="btn success" type="submit" "Enviar"/>
-	    </div>
-	</div>
-  </div> 
 </form>
 </div>
