ofx improvements - unit account cheking

--- a/src/main/webapp/financial/upload_bank_file.html
+++ b/src/main/webapp/financial/upload_bank_file.html
@@ -8,7 +8,8 @@
 	$(function(){
       $(".account").accountField();
       $(".category").categoryAccountField();		
-      $("#unit_select").unitField(false, false, true);
+      $("#unit_select").unitField(false, true, false);
+      $("#unit_select").val(AuthUtil.unit.id).change();
 	})
 </script>
 <h3>
@@ -56,7 +57,7 @@
         <label for="unit_select">Unidade</label>
           <div class="input">
             <div class="inline-inputs">
-              <select id='unit_select' class="unit_select url_parameter notselect2" name='unit_select' disabled></select>
+              <select id='unit_select' class="unit_select notselect2" name='unit_select' disabled></select>
             </div>
           </div>
       </div>                     
