--- a/src/main/webapp/financial_admin/account_ofx_conciliation.html
+++ b/src/main/webapp/financial_admin/account_ofx_conciliation.html
@@ -9,6 +9,8 @@
     $("#account_ofx").accountField(true);
     $("#account_fin").accountField(true);
     $("#category_select").categoryAccountField(true);
+    $("#unit_select").unitField(false, true, false);
+    $("#unit_select").val(AuthUtil.unit.id).change();
 
     DataManager.getPaymentTypes(function(paymentTypes){
           var ret = "";
@@ -437,8 +439,22 @@
                 </div>
               </div>
           </div>
+          <div class="clearfix">
+            <label for="status_select_filter">Observação</label>
+            <div class="input">
+              <input class='local_storage' type="text" id='obs_search' name="obs_search" placeholder="Contendo"/>
+            </div>
+          </div>            
         </div>
         <div class="span8">
+          <div class="clearfix">
+            <label for="unit_select">Unidade</label>
+              <div class="input">
+                <div class="inline-inputs">
+                  <select id='unit_select' class="unit_select notselect2" name='unit_select' disabled></select>
+                </div>
+              </div>
+          </div>                     
           <div class="clearfix">
               <label for="account_ofx">Conta ofx</label>
               <div class="input">
