--- a/src/main/webapp/financial_admin/accountcompanyunit.html
+++ b/src/main/webapp/financial_admin/accountcompanyunit.html
@@ -44,6 +44,22 @@
              </div>
           </div>               
           <div class="clearfix">
+            <label for="agency">Agência</label>
+             <div class="input">
+                <div class="input-prepend">
+                  <input class="medium" id="agency" name="agency" type="text"/>
+                </div>
+             </div>
+          </div>
+          <div class="clearfix">
+            <label for="accountstr">Conta</label>
+             <div class="input">
+                <div class="input-prepend">
+                  <input class="medium" id="accountstr" name="accountstr" type="text"/>
+                </div>
+             </div>
+          </div>
+          <div class="clearfix">
             <label for="value">Saldo</label>
              <div class="input">
                 <div class="input-prepend">
