to show or not in each unit calendar

--- a/src/main/webapp/user/edit.html
+++ b/src/main/webapp/user/edit.html
@@ -659,6 +659,10 @@
 
                         <div class="form-inline">
                             <div class="form-group">
+                                <label for="companyunit_showincalendar">Agenda</label>
+                                <input class="form-control" name="companyunit_showincalendar" id="companyunit_showincalendar" type="checkbox" size="30"/>
+                            </div>
+                            <div class="form-group">
                                 <label for="companyunit_obs">Obs</label>
                                 <input class="form-control" name="companyunit_obs" id="companyunit_obs" size="30"/>
                             </div>
@@ -675,6 +679,7 @@
                     <table id="grid_companyunit" class="table table-striped table-bordered table-hover">
                         <thead>
                             <th>Unidade</th>
+                            <th>Agenda</th>
                             <th>Obs</th>
                             <th></th>
                         </thead>
