--- a/src/main/webapp/monthly/edit_monthly.html
+++ b/src/main/webapp/monthly/edit_monthly.html
@@ -20,7 +20,7 @@
         <a class="btn primary" href="/monthly/list_monthly">Lista</a>
         <input class="btn success" type="submit" value="Salvar">
         <a class="btn primary" href="/monthly/edit_monthly">Inserir novo</a>
-        <a class="btn success useCompany" href='/financial/monthly'>Ir
+        <a class="btn success useCompany" href='/calendar'>Ir
         </a>      
         </div>
       <div class="lift:MonthlySnippet.maintain">
